@@ -5,7 +5,8 @@ Changelog
 3.5.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Check for searchbox value when a tabbedview page gets reloaded.
+  [phgross]
 
 
 3.5.1 (2016-08-23)
